# opentelemetry-cpp-demo

./: CMakeLists.txt  README.md
include/opentelemetry/proto/common/v1/: common.pb.h
include/opentelemetry/proto/logs/v1/: logs.pb.h
include/opentelemetry/proto/metrics/v1/: metrics.pb.h
include/opentelemetry/proto/profiles/v1development/: profiles.grpc.pb.h  (+2 more)
lib/: opentelemetry_common.lib  opentelemetry_cpp.lib  opentelemetry_exporter_in_memory.lib  opentelemetry_exporter_in_memory_metric.lib  opentelemetry_exporter_ostream_logs.lib  opentelemetry_exporter_ostream_metrics.lib  opentelemetry_exporter_ostream_span.lib  opentelemetry_exporter_otlp_grpc.lib  opentelemetry_exporter_otlp_grpc_client.lib  opentelemetry_exporter_otlp_grpc_log.lib  opentelemetry_exporter_otlp_grpc_metrics.lib  opentelemetry_exporter_otlp_http.lib  opentelemetry_exporter_otlp_http_client.lib  opentelemetry_exporter_otlp_http_log.lib  opentelemetry_exporter_otlp_http_metric.lib  opentelemetry_http_client_curl.lib  opentelemetry_otlp_recordable.lib  opentelemetry_proto.lib  opentelemetry_proto_grpc.lib  opentelemetry_version.lib
lib/cmake/opentelemetry-cpp/: opentelemetry-cpp-config-version.cmake  opentelemetry-cpp-config.cmake  opentelemetry-cpp-target-debug.cmake  opentelemetry-cpp-target-release.cmake  opentelemetry-cpp-target.cmake
lib/pkgconfig/: opentelemetry_api.pc  opentelemetry_common.pc  opentelemetry_logs.pc  opentelemetry_metrics.pc  opentelemetry_resources.pc  opentelemetry_trace.pc  opentelemetry_version.pc
src/: http_exporter.cpp  processTraceA.cpp  processTraceB.cpp
(+17 files in other folders)
